more typo fixes index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a current Computer Science student with progressive experience writing code and designing solutions. I am seeking a challenging role as a computer science intern. Adept at working effectively in fast-paced, deadline-driven settings that demand strong organizational and analytical skills. I am currently studing for my BS in Computer Science: Game Design at the University of California, Santa Cruz. Here is a link to my <a href="Shea_Line_-_Computer_Science_Internship.pdf"target="_blank">full resume.</a></p>
+        <p>I am a current Computer Science student with progressive experience writing code and designing solutions. I am seeking a challenging role as a Computer Science intern. Adept at working effectively in fast-paced, deadline-driven settings that demand strong organizational and analytical skills. I am currently studing for my BS in Computer Science: Game Design at the University of California, Santa Cruz. Here is the link to my <a href="Shea_Line_-_Computer_Science_Internship.pdf"target="_blank">full resume.</a></p>
     </section>
 
     <section id="projects">
