added phone number

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     <section id="contact">
         <h2>Contact</h2>
+        <p>Phone: 707-479-6922</p>
         <p>Email: sline@ucsc.edu</p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/shea-line-ab3918224/" target="_blank">linkedin-profile</a></p>
     </section>
